--- a/src/css/themes/_ef-autumn.scss
+++ b/src/css/themes/_ef-autumn.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #feeeca;
 $cursor_bg: #ffaa33;
 $cursor_fg: #0f0e06;
 
-.Ymacs-Theme-ef-autumn { --ymacs-cursor-bg: #ffaa33; --ymacs-cursor-fg: #0f0e06; }
+.Ymacs-Theme-ef-autumn { --ymacs-cursor-bg: #ffaa33; --ymacs-cursor-fg: #0f0e06; --ymacs-modeline-in-bg: #36322f; --ymacs-modeline-ac-bg: #692a12; }
 .Ymacs-Theme-ef-autumn { color: #cfbcba; background-color: #0f0e06; }
 .Ymacs-Theme-ef-autumn .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-autumn .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #15140d; border-bottom: 1px solid #15140d; }
