--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #142010;
 $cursor_bg: #007f00;
 $cursor_fg: #fcf7ef;
 
-.Ymacs-Theme-ef-cyprus { --ymacs-cursor-bg: #007f00; --ymacs-cursor-fg: #fcf7ef; }
+.Ymacs-Theme-ef-cyprus { --ymacs-cursor-bg: #007f00; --ymacs-cursor-fg: #fcf7ef; --ymacs-modeline-in-bg: #e5e3d8; --ymacs-modeline-ac-bg: #c0df6f; }
 .Ymacs-Theme-ef-cyprus { color: #242521; background-color: #fcf7ef; }
 .Ymacs-Theme-ef-cyprus .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-cyprus .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #f8f3ea; border-bottom: 1px solid #f8f3ea; }
