--- a/src/css/themes/_ef-duo-dark.scss
+++ b/src/css/themes/_ef-duo-dark.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #dedeff;
 $cursor_bg: #ef6f11;
 $cursor_fg: #070019;
 
-.Ymacs-Theme-ef-duo-dark { --ymacs-cursor-bg: #ef6f11; --ymacs-cursor-fg: #070019; }
+.Ymacs-Theme-ef-duo-dark { --ymacs-cursor-bg: #ef6f11; --ymacs-cursor-fg: #070019; --ymacs-modeline-in-bg: #2a2739; --ymacs-modeline-ac-bg: #352487; }
 .Ymacs-Theme-ef-duo-dark { color: #d0d0d0; background-color: #070019; }
 .Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-duo-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #13101f; border-bottom: 1px solid #13101f; }
