--- a/src/css/themes/_ef-duo-light.scss
+++ b/src/css/themes/_ef-duo-light.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #111133;
 $cursor_bg: #1144ff;
 $cursor_fg: #fff8f0;
 
-.Ymacs-Theme-ef-duo-light { --ymacs-cursor-bg: #1144ff; --ymacs-cursor-fg: #fff8f0; }
+.Ymacs-Theme-ef-duo-light { --ymacs-cursor-bg: #1144ff; --ymacs-cursor-fg: #fff8f0; --ymacs-modeline-in-bg: #e7e0da; --ymacs-modeline-ac-bg: #f8cf8f; }
 .Ymacs-Theme-ef-duo-light { color: #222222; background-color: #fff8f0; }
 .Ymacs-Theme-ef-duo-light .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-duo-light .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #f9f2ef; border-bottom: 1px solid #f9f2ef; }
