--- a/src/css/themes/_ef-elea-dark.scss
+++ b/src/css/themes/_ef-elea-dark.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #ecf0ff;
 $cursor_bg: #ef7fa8;
 $cursor_fg: #222524;
 
-.Ymacs-Theme-ef-elea-dark { --ymacs-cursor-bg: #ef7fa8; --ymacs-cursor-fg: #222524; }
+.Ymacs-Theme-ef-elea-dark { --ymacs-cursor-bg: #ef7fa8; --ymacs-cursor-fg: #222524; --ymacs-modeline-in-bg: #3e4140; --ymacs-modeline-ac-bg: #35605d; }
 .Ymacs-Theme-ef-elea-dark { color: #eaf2ef; background-color: #222524; }
 .Ymacs-Theme-ef-elea-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-elea-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #2b2e2d; border-bottom: 1px solid #2b2e2d; }
