--- a/src/css/themes/_ef-maris-dark.scss
+++ b/src/css/themes/_ef-maris-dark.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #ecf0ff;
 $cursor_bg: #8fdfff;
 $cursor_fg: #131c2b;
 
-.Ymacs-Theme-ef-maris-dark { --ymacs-cursor-bg: #8fdfff; --ymacs-cursor-fg: #131c2b; }
+.Ymacs-Theme-ef-maris-dark { --ymacs-cursor-bg: #8fdfff; --ymacs-cursor-fg: #131c2b; --ymacs-modeline-in-bg: #2a3644; --ymacs-modeline-ac-bg: #2f527b; }
 .Ymacs-Theme-ef-maris-dark { color: #eaedef; background-color: #131c2b; }
 .Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-maris-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #1a2331; border-bottom: 1px solid #1a2331; }
