--- a/src/css/themes/_ef-maris-light.scss
+++ b/src/css/themes/_ef-maris-light.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #142810;
 $cursor_bg: #036f99;
 $cursor_fg: #edf4f8;
 
-.Ymacs-Theme-ef-maris-light { --ymacs-cursor-bg: #036f99; --ymacs-cursor-fg: #edf4f8; }
+.Ymacs-Theme-ef-maris-light { --ymacs-cursor-bg: #036f99; --ymacs-cursor-fg: #edf4f8; --ymacs-modeline-in-bg: #cfd8e3; --ymacs-modeline-ac-bg: #a0c2ef; }
 .Ymacs-Theme-ef-maris-light { color: #151a27; background-color: #edf4f8; }
 .Ymacs-Theme-ef-maris-light .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-maris-light .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #e6ecf2; border-bottom: 1px solid #e6ecf2; }
