--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #cccccc;
 $cursor_bg: #f2777a;
 $cursor_fg: #2d2d2d;
 
-.Ymacs-Theme-sanityinc-tomorrow-eighties { --ymacs-cursor-bg: #f2777a; --ymacs-cursor-fg: #2d2d2d; }
+.Ymacs-Theme-sanityinc-tomorrow-eighties { --ymacs-cursor-bg: #f2777a; --ymacs-cursor-fg: #2d2d2d; --ymacs-modeline-in-bg: #393939; --ymacs-modeline-ac-bg: #515151; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties { color: #cccccc; background-color: #2d2d2d; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #515151; border-bottom: 1px solid #515151; }
