--- a/src/css/themes/_sanityinc-tomorrow-night.scss
+++ b/src/css/themes/_sanityinc-tomorrow-night.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #c5c8c6;
 $cursor_bg: #cc6666;
 $cursor_fg: #1d1f21;
 
-.Ymacs-Theme-sanityinc-tomorrow-night { --ymacs-cursor-bg: #cc6666; --ymacs-cursor-fg: #1d1f21; }
+.Ymacs-Theme-sanityinc-tomorrow-night { --ymacs-cursor-bg: #cc6666; --ymacs-cursor-fg: #1d1f21; --ymacs-modeline-in-bg: #282a2e; --ymacs-modeline-ac-bg: #373b41; }
 .Ymacs-Theme-sanityinc-tomorrow-night { color: #c5c8c6; background-color: #1d1f21; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #373b41; border-bottom: 1px solid #373b41; }
