--- a/src/css/themes/_base16-apathy.scss
+++ b/src/css/themes/_base16-apathy.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #5f9c92;
 $cursor_bg: #3e9688;
 $cursor_fg: #031a16;
 
-.Ymacs-Theme-base16-apathy { --ymacs-cursor-bg: #3e9688; --ymacs-cursor-fg: #031a16; }
+.Ymacs-Theme-base16-apathy { --ymacs-cursor-bg: #3e9688; --ymacs-cursor-fg: #031a16; --ymacs-modeline-in-bg: #0b342d; --ymacs-modeline-ac-bg: #184e45; }
 .Ymacs-Theme-base16-apathy { color: #81b5ac; background-color: #031a16; }
 .Ymacs-Theme-base16-apathy .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-base16-apathy .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
