--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -7,7 +7,7 @@ $modeline_ac_fg: #ffffff;
 $cursor_bg: #ff9da4;
 $cursor_fg: #002451;
 
-.Ymacs-Theme-sanityinc-tomorrow-blue { --ymacs-cursor-bg: #ff9da4; --ymacs-cursor-fg: #002451; }
+.Ymacs-Theme-sanityinc-tomorrow-blue { --ymacs-cursor-bg: #ff9da4; --ymacs-cursor-fg: #002451; --ymacs-modeline-in-bg: #00346e; --ymacs-modeline-ac-bg: #003f8e; }
 .Ymacs-Theme-sanityinc-tomorrow-blue { color: #ffffff; background-color: #002451; }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #003f8e; border-bottom: 1px solid #003f8e; }
