--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -150,7 +150,7 @@ $lnwidth: 3.1em;
 
   > .bar {
     position: relative;
-    background-color: #888;
+    background-color: var(--ymacs-modeline-in-bg);
     z-index: 30;
     &:before {
       content: "";
