--- a/src/css/themes/_ef-duo-light.scss
+++ b/src/css/themes/_ef-duo-light.scss
@@ -33,6 +33,19 @@ $cursor_fg: #fff8f0;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #111133; background-color: #f8cf8f; }
 .minibuffer-prompt { color: #4250ef; }
 .mode-line-buffer-id { font-weight: bold; }
+.heading1 { color: #9f4a00; font-weight: bold; }
+.heading2 { color: #4250ef; font-weight: bold; }
+.heading3 { color: #8f5a3a; font-weight: bold; }
+.heading4 { color: #6052cf; font-weight: bold; }
+.markdown-blockquote { color: #406f90; font-style: italic; }
+.markdown-blockquote1 { color: #406f90; font-style: italic; }
+.markdown-blockquote2 { color: #406f90; font-style: italic; }
+.markdown-blockquote3 { color: #406f90; font-style: italic; }
+.markdown-pre { color: #4250ef; }
+.markdown-code { color: #9f4a00; }
+.markdown-code-starter { color: #9f4a00; }
+.markdown-code-stopper { color: #9f4a00; }
+.markdown-ref { color: #1f6fbf; }
 .directive { color: #3f70a0; }
 .type { color: #065fff; }
 .builtin { color: #1f77bb; font-weight: bold; }
@@ -71,12 +84,5 @@ $cursor_fg: #fff8f0;
 .block-starter, .block-stopper { color: #3f70a0; }
 .exp-starter, .exp-stopper { color: #3f70a0; }
 .lisp-keyword { color: #1f77bb; font-weight: bold; }
-.heading1 { color: #9f4a00; font-weight: bold; }
-.heading2 { color: #4250ef; font-weight: bold; }
-.heading3 { color: #8f5a3a; font-weight: bold; }
-.heading4 { color: #6052cf; font-weight: bold; }
-.markdown-blockquote { color: #a2403f; font-style: italic; }
-.markdown-blockquote1 { color: #a2403f; font-style: italic; }
-.markdown-blockquote2 { color: #a2403f; font-style: italic; }
-.markdown-blockquote3 { color: #a2403f; font-style: italic; }
+.hyperlink { color: #1f6fbf; }
 }
