--- a/src/css/themes/_whiteboard.scss
+++ b/src/css/themes/_whiteboard.scss
@@ -33,6 +33,19 @@ $cursor_fg: #f5f5f5;
 .Ymacs_Frame-active .Ymacs_Modeline { color: #000000; background-color: #bfbfbf; border: 1px outset #bfbfbf; }
 .minibuffer-prompt { color: #104e8b; }
 .mode-line-buffer-id { color: #00008b; font-weight: bold; }
+.heading1 { color: #0000cd; }
+.heading2 { color: #1e90ff; }
+.heading3 { color: #4682b4; }
+.heading4 { color: #4169e1; }
+.markdown-blockquote { color: #cd853f; }
+.markdown-blockquote1 { color: #cd853f; }
+.markdown-blockquote2 { color: #cd853f; }
+.markdown-blockquote3 { color: #cd853f; }
+.markdown-pre { color: #b3b3b3; }
+.markdown-code { color: #b3b3b3; }
+.markdown-code-starter { color: #b3b3b3; }
+.markdown-code-stopper { color: #b3b3b3; }
+.markdown-ref { color: #00ffff; }
 .directive { color: #cdad00; }
 .type { color: #00688b; }
 .builtin { color: #cd6600; }
@@ -71,12 +84,5 @@ $cursor_fg: #f5f5f5;
 .block-starter, .block-stopper { color: #cdad00; }
 .exp-starter, .exp-stopper { color: #cdad00; }
 .lisp-keyword { color: #cd6600; }
-.heading1 { font-weight: bold; font-size: 1.703em; }
-.heading2 { font-weight: bold; font-size: 1.414em; }
-.heading3 { font-weight: bold; font-size: 1.180em; }
-.heading4 { font-weight: bold; }
-.markdown-blockquote { color: #7f7f7f; }
-.markdown-blockquote1 { color: #7f7f7f; }
-.markdown-blockquote2 { color: #7f7f7f; }
-.markdown-blockquote3 { color: #7f7f7f; }
+.hyperlink { color: #00ffff; }
 }
