--- a/src/css/themes/_base16-apathy.scss
+++ b/src/css/themes/_base16-apathy.scss
@@ -41,7 +41,7 @@ $cursor_fg: #031a16;
 .markdown-blockquote1 { color: #5f9c92; }
 .markdown-blockquote2 { color: #5f9c92; }
 .markdown-blockquote3 { color: #5f9c92; }
-.markdown-pre { color: #2b685e; }
+.markdown-pre { color: #3e4c96; }
 .markdown-code { color: #3e4c96; }
 .markdown-code-starter { color: #3e4c96; }
 .markdown-code-stopper { color: #3e4c96; }
